# claude-usage-monitor

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  monitor.rs  shim.rs
ui/: app.js  index.html  styles.css
