[package]
name = "halo"
version = "0.2.1"
description = "Compact desktop widget for Claude usage limits"
authors = ["Maurits Puggaard"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
